2005-12-12  David Harrison  <harrison@apple.com>

	<rdar://problem/4026906> Paste of HTML table content can break table structure
	<rdar://problem/4027704> Paste of HTML list content can break list structure by dropping empty list items
	
        * editing/pasteboard/block-wrappers-necessary.html:
	    Removed empty p tag.
        * editing/pasteboard/paste-list-001-expected.checksum: Added.
        * editing/pasteboard/paste-list-001-expected.png: Added.
        * editing/pasteboard/paste-list-001-expected.txt: Added.
        * editing/pasteboard/paste-list-001.html: Added.
        * editing/pasteboard/paste-table-001-expected.checksum: Added.
        * editing/pasteboard/paste-table-001-expected.png: Added.
        * editing/pasteboard/paste-table-001-expected.txt: Added.
        * editing/pasteboard/paste-table-001.html: Added.

2005-12-12  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Hyatt.

        Test case for our CSS seletorText serialization.

        * fast/dom/css-selectorText-expected.checksum: Added.
        * fast/dom/css-selectorText-expected.png: Added.
        * fast/dom/css-selectorText-expected.txt: Added.
        * fast/dom/css-selectorText.html: Added.

2005-12-12  Eric Seidel  <eseidel@apple.com>

        Reviewed by ggaren.

        Test for: <rdar://problem/4372143>

        * fast/forms/textarea-setinnerhtml-expected.checksum: Added.
        * fast/forms/textarea-setinnerhtml-expected.png: Added.
        * fast/forms/textarea-setinnerhtml-expected.txt: Added.
        * fast/forms/textarea-setinnerhtml.html: Added.

2005-12-12  Rob Buis  <rwlbuis@xs4all.nl>

        Reviewed by eseidel.  Committed by eseidel.

        "S" and "T" path types handle control points incorrectly
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6042

        * svg/custom/control-points-for-S-and-T-expected.checksum: Added.
        * svg/custom/control-points-for-S-and-T-expected.png: Added.